# MultiModal-RAG-Application

./: .gitignore  README.md  docker-compose.yaml
airflow/: Dockerfile  docker-compose.yaml  (+1 more)
backend/: .dockerignore  Dockerfile  doc_parsor2.py  pyproject.toml
backend/app/: document_processors.py  final.py  main.py  schemas.py  stored_pages.json  utils.py
backend/app/config/: settings.py
backend/app/controllers/: auth_controller.py
backend/app/llama_parsed/: An Introduction to Alternative Credit.pdf.json  Beyond Active and Passive Investing_ The Customization of Finance.pdf.json  Handbook of Artificial Intelligence and Big Data Applications in Investments.pdf.json  Investment Horizon_ Serial Correlation_ and Better (Retirement) Portfolios.pdf.json  Investment Model Validation_ A Guide for Practitioners.pdf.json  Lifetime Financial Advice_ A Personalized Optimal Multilevel Approach.pdf.json  Revisiting the Equity Risk Premium.pdf.json  The Economics of Private Equity_ A Critical Review.pdf.json  Valuation Handbook _ International Guide to Cost of Capital_ 2022 Summary Edition.pdf.json  Valuation Handbook _ International Guide to Cost of Capital_ 2023 Summary Edition.pdf.json
backend/app/models/: report_models.py
backend/app/reports/markdown/: An Introduction to Alternative Credit_20241106_161121.md  The Economics of Private Equity_ A Critical Review_20241106_162509.md  processing_summary_20241106_023531.md  processing_summary_20241106_023710.md  processing_summary_20241106_024150.md
backend/app/routes/: auth_routes.py  helpers.py  publications_routes.py  summary_routes.py
backend/app/services/: PublicationService.py  auth_service.py  database_service.py  gpt.py  object_store.py  pinecone_service.py  rag_service.py  report_service.py  snowflake.py
backend/app/storage_nodes_summary/: docstore.json  index_store.json
backend/chat_histories/assignment3/pdfs/: Beyond Active and Passive Investing_ The Customization of Finance.pdf_chat.json  Investment Model Validation_ A Guide for Practitioners.pdf_chat.json
backend/pdf/: Beyond Active and Passive Investing_ The Customization of Finance_summary.txt
backend/vectorstore/table_references/: table1-page16.xlsx  table1-page17.xlsx  table1-page39.xlsx  table1-page42.xlsx  table1-page43.xlsx  table1-page45.xlsx  table1-page47.xlsx  table1-page48.xlsx  table1-page51.xlsx  table1-page52.xlsx  table1-page76.xlsx  table1-page77.xlsx
frontend/: .dockerignore  Dockerfile  app.py  pyproject.toml
frontend/app_pages/: document_actions_page.py  documents_page.py  home_page.py  pdf_gallery.py
frontend/services/: authentication.py  utils.py
(+14 files in other folders)
